# RedmineHs

./: LICENSE  README.md  Redmine.cabal
src/Redmine/: Get.hs  JSON.hs  Manager.hs  Post.hs  Put.hs  Rest.hs  Types.hs  Utils.hs
testsuite/: testGet.hs
