name: Redmine
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: MIT
license-file: "LICENSE"
maintainer: charles.stpierre@gmail.com
synopsis: Library to access Redmine's REST services
description: http://www.redmine.org/projects/redmine/wiki/Rest_api
author: Charles St-Pierre
data-dir: ""

Library
    build-depends: QuickCheck -any, base -any, old-locale -any,
                   time -any, old-time -any, bytestring -any, http-conduit >= 2.1.0,
                   aeson -any, HTTP -any, network -any, text,
                   transformers, containers, http-client-tls,
                   resourcet, connection, MissingH
    exposed-modules: Redmine.Types, Redmine.Manager, Redmine.Get
    buildable: True
    hs-source-dirs: src

test-suite test-Redmine
    build-depends: QuickCheck -any, base -any, HUnit
    type: exitcode-stdio-1.0
    main-is: testGet.hs
    buildable: True
    cpp-options: -DMAIN_FUNCTION=main
    hs-source-dirs: testsuite, src
